crud creation ok/ html css de footer/contact/navBar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
 <app-header></app-header>
-<app-about></app-about>
-<app-competencesCrud></app-competencesCrud>
-<app-competences></app-competences>
-<app-projets></app-projets>
-<app-contact></app-contact>
+<router-outlet></router-outlet>
+
 <app-footer></app-footer>
