--- a/src/app/competences-crud/competences-crud.component.html
+++ b/src/app/competences-crud/competences-crud.component.html
@@ -80,7 +80,7 @@
       </div>
     
       <div class="form-group mt-3">
-        <button type="submit" class="btn btn-success">créer</button>
+        <button type="submit" class="btn btn-success" id="btn">créer</button>
       </div>
     </form>
   </div>
