--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+
+<footer class="bg-light text-center text-lg-start">
+    
+    <div class="text-center p-3" style="background-color: #CDBA97ba;">
+      © 2020 KOUAOUCI KARIMA
+    
+    </div>
+    
+  </footer>
