--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,31 @@
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+   
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" routerLink='/competences-crud'>accueil <span class="sr-only"></span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink='/about'>About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/competences">competences</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " routerLink="/projets">Mes projets</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link " routerLink="/contact">Contacter moi</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " routerLink="/competences-crud">competences-crud</a>
+           
+           
+            
+          </li>
+      </ul>
+    </div>
+  </nav>
