--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<app-about></app-about>
+<app-competences></app-competences>
+<app-competences-crud></app-competences-crud>
+<app-projets></app-projets>
+<app-contact></app-contact>
